<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.idb.cacao</groupId>
		<artifactId>CACAO</artifactId>
		<version>1.0</version>
	</parent>
	<artifactId>CACAOWeb</artifactId>
	<name>CACAO WEB</name>
	<description>MVP for an accounting data system</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<jaxb.api.version>2.3.0</jaxb.api.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.microsoft.azure/azure-active-directory-spring-boot-starter -->
		<dependency>
		    <groupId>com.microsoft.azure</groupId>
		    <artifactId>azure-active-directory-spring-boot-starter</artifactId>
		    <version>2.3.1</version>
	    	<exclusions>
	      		<exclusion> 
		        	<groupId>com.nimbusds</groupId>
	        		<artifactId>nimbus-jose-jwt</artifactId>
	      		</exclusion>
	    	</exclusions> 
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-taglibs</artifactId>
		</dependency>

		<!-- This dependency goes for the 'auto discovery service capability' provided by Netflix's Eureka.
			This application is itself a client and a service registered at Eureka -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
			<version>3.0.3</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.idb.cacao.api</groupId>
			<artifactId>CACAO_API</artifactId>
			<version>${project.version}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.idb.cacao</groupId>
			<artifactId>CACAO_ACCOUNT</artifactId>
			<version>${project.version}</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.idb.cacao</groupId>
			<artifactId>CACAO_MOCK_ES</artifactId>
			<version>${project.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>32.0.0-jre</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!-- Redefines dependecy from parent POM in order to change the 'scope'. 
			Parent POM declares it as 'test' scope, so it's supposed to be used only 
			at test use cases. Here we are changing to the 'provided' scope, so that 
			it can be used at runtime, what can be the case for development environment -->
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-stream</artifactId> 
			<version>3.1.3</version> </dependency> <dependency> <groupId>org.springframework.cloud</groupId> 
			<artifactId>spring-cloud-stream-binder-kafka</artifactId> <version>3.1.3</version> 
			</dependency> <dependency> <groupId>org.springframework.cloud</groupId> <artifactId>spring-cloud-stream-test-support</artifactId> 
			<version>3.1.3</version> <scope>test</scope> </dependency> <dependency> <groupId>org.springframework.kafka</groupId> 
			<artifactId>spring-kafka</artifactId> </dependency> <dependency> <groupId>org.springframework.kafka</groupId> 
			<artifactId>spring-kafka-test</artifactId> <scope>test</scope> </dependency> 
			<dependency> <groupId>org.testcontainers</groupId> <artifactId>kafka</artifactId> 
			<version>1.16.0</version> <scope>test</scope> </dependency> -->

		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk16 -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk16</artifactId>
			<version>1.46</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk16 -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcmail-jdk16</artifactId>
			<version>1.46</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-boot-starter</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.mitre.dsmiley.httpproxy/smiley-http-proxy-servlet -->
		<dependency>
			<groupId>org.mitre.dsmiley.httpproxy</groupId>
			<artifactId>smiley-http-proxy-servlet</artifactId>
			<version>1.12</version>
		</dependency>

		<!-- This dependency is due to 'FileGenerator' feature for generating random strings out of regular expressions -->
		<!-- https://mvnrepository.com/artifact/com.github.mifmif/generex -->
		<dependency>
		    <groupId>com.github.mifmif</groupId>
		    <artifactId>generex</artifactId>
		    <version>1.0.2</version>
		</dependency>

		<!-- This dependency is due to use of PARQUET format for SYNC operations for better performance transmitting data with lower footprint --> 
		<!-- https://mvnrepository.com/artifact/org.apache.parquet/parquet-hadoop -->
		<dependency>
    		<groupId>org.apache.parquet</groupId>
    		<artifactId>parquet-hadoop</artifactId>
    		<version>1.12.2</version>
		</dependency>

		<!-- This dependency is due to use of PARQUET format for SYNC operations for better performance transmitting data with lower footprint --> 
		<!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client -->
		<dependency>
    		<groupId>org.apache.hadoop</groupId>
    		<artifactId>hadoop-client</artifactId>
    		<version>3.3.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jersey</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>elasticsearch</artifactId>
			<version>1.16.3</version>
			<scope>test</scope>
		</dependency>		
		
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.16.3</version>
			<scope>test</scope>
		</dependency>		

	</dependencies>

	<build>
		<finalName>cacao_web</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>org.idb.cacao.web.WebApplication</mainClass>
					<layout>ZIP</layout>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>qa</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<phase>install</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/lib</outputDirectory>
								</configuration>
							</execution>
							<execution>
								<id>sources</id>
								<phase>post-clean</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<classifier>sources</classifier>
									<outputDirectory>${project.build.directory}/sources</outputDirectory>
									<overWriteReleases>false</overWriteReleases>
									<overWriteSnapshots>false</overWriteSnapshots>
									<overWriteIfNewer>true</overWriteIfNewer>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
